core/codegen/vdm2jml/src/test/resources/traces_sl_specs/TypeErrorsInFirstAndSecondFrame.vdmsl.eval.result
<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<testResult type="org.overture.vdm2jml.tests.exec.JmlSlTraceJavaGenTest">
<result>
<output object="rO0ABXNyABBqYXZhLnV0aWwuVmVjdG9y2Zd9W4A7rwEDAANJABFjYXBhY2l0eUluY3JlbWVudEkADGVsZW1lbnRDb3VudFsAC2VsZW1lbnREYXRhdAATW0xqYXZhL2xhbmcvT2JqZWN0O3hwAAAAAAAAAAN1cgATW0xqYXZhLmxhbmcuT2JqZWN0O5DOWJ8QcylsAgAAeHAAAAAKc3IAKW9yZy5vdmVydHVyZS5jdC5jdHJ1bnRpbWUudXRpbHMuVHJhY2VUZXN0feFkkkPBXUACAARMAAJub3QAE0xqYXZhL2xhbmcvSW50ZWdlcjtMAAZyZXN1bHR0ABJMamF2YS9sYW5nL1N0cmluZztMAAR0ZXN0cQB+AAdMAAd2ZXJkaWN0dAApTG9yZy9vdmVydHVyZS9pbnRlcnByZXRlci90cmFjZXMvVmVyZGljdDt4cHNyABFqYXZhLmxhbmcuSW50ZWdlchLioKT3gYc4AgABSQAFdmFsdWV4cgAQamF2YS5sYW5nLk51bWJlcoaslR0LlOCLAgAAeHAAAAABdAAqRXJyb3IgNDA4NzogQ2Fubm90IGNvbnZlcnQgMSBhdCBsaW5lIDIxOjI5dAAJaWRCb29sKDEpfnIAJ29yZy5vdmVydHVyZS5pbnRlcnByZXRlci50cmFjZXMuVmVyZGljdAAAAAAAAAAAEgAAeHIADmphdmEubGFuZy5FbnVtAAAAAAAAAAASAAB4cHQADElOQ09OQ0xVU0lWRXNxAH4ABXNxAH4ACgAAAAJ0AAR0cnVldAAMaWRCb29sKHRydWUpfnEAfgAPdAAGUEFTU0VEc3EAfgAFc3EAfgAKAAAAA3QALEVycm9yIDQwODc6IENhbm5vdCBjb252ZXJ0IHRydWUgYXQgbGluZSAyMjozdAAUdHlwZUVyclNlY29uZEZyYW1lKCl+cQB+AA90AAZGQUlMRURwcHBwcHBweA==" resource="TypeErrorsInFirstAndSecondFrame.vdmsl" value="[TraceTest: Number: 1 Test: idBool(1) Result: Error 4087: Cannot convert 1 at line 21:29 Verdict: INCONCLUSIVE, TraceTest: Number: 2 Test: idBool(true) Result: true Verdict: PASSED, TraceTest: Number: 3 Test: typeErrSecondFrame() Result: Error 4087: Cannot convert true at line 22:3 Verdict: FAILED]"/>
</result>
</testResult>
