core/codegen/vdm2jml/src/test/resources/traces_sl_specs/TypeErrorsInFirstAndSecondFrame.vdmsl
module Entry

exports all
definitions

functions

idBool :  bool -> bool
idBool (x) == x;

typeErrSecondFrame :  () -> int
typeErrSecondFrame () ==
let a : nat | bool = true
in
  a;
  

traces

T1:
  (let a in set {1,true} in idBool(a)) |
  typeErrSecondFrame()

end Entry
